force-app/main/default/objects/Contact/fields/inwise_Account__c.field-meta.xml
<CustomField>
    <fullName>inwise_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>inwise Account</label>
    <referenceTo>Account__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>