force-app/main/default/objects/Contact/listViews/Domain_com.listView-meta.xml
<ListView>
    <fullName>Domain_com</fullName>
    <columns>CONTACT.TITLE</columns>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.EMAIL</field>
        <operation>contains</operation>
        <value>domain.com</value>
    </filters>
    <label>Domain.com</label>
</ListView>