force-app/main/default/objects/Contact/listViews/many_cmany.listView-meta.xml
<ListView>
    <fullName>many_cmany</fullName>
    <columns>CONTACT.TITLE</columns>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>many contacts</label>
</ListView>