force-app/main/default/objects/Contact/listViews/Senior_Citizens_Rec.listView-meta.xml
<ListView>
    <fullName>Senior_Citizens_Rec</fullName>
    <columns>CONTACT.TITLE</columns>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <filterScope>Everything</filterScope>
    <label>Senior Citizens</label>
</ListView>