force-app/main/default/objects/Contact/listViews/Test_View_2.listView-meta.xml
<ListView>
    <fullName>Test_View_2</fullName>
    <columns>CONTACT.TITLE</columns>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>Test View 2</label>
</ListView>